--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
-<h1>Quadro de Mensagens</h1>
+{% load static %}
+<h1><img src="{% static 'img/django-logo.png' %}"> Quadro de Mensagens</h1>
 <ul>
     {% for post in post_list %}
         <li>
